--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,13 @@
-// Define variables for your color scheme
-
-// For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$primary-violet: #6966FF;
+$primary-violet-hover: #524FFF;
+$secondary-dark: #393953;
+$secondary-dark-hover: #4F4C64;
+$neutral-1000: #1F1F1F;
+$neutral-900: #3C3C3C;
+$neutral-800: #5E5E5E;
+$neutral-0: #FFFFFF;
+$neutral-100: #F1F1F1;
+$neutral-100-violet: #F3F1FC;
+$level-beginner: #08875D;
+$level-intermediate: #FF4F00;
+$level-expert: #E02D3C;
