--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "form_legend_clear";
 @import "navbar";
+@import "logo";
+@import "buttons";
+@import "container";
+@import "footer";
+@import "search_bar";
+@import "banner";
