--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,28 @@
-.navbar-lewagon {
+.navbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid $neutral-100;
+  background-color: rgba($color: white, $alpha: 0.75);
+  backdrop-filter: $backdrop-blur;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.container-navbar {
+  margin: 15px 0;
+  display: flex;
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  align-items: center;
+  li {
+    list-style: none;
+  }
+  ul {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
 }
