--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,13 @@
 // Specific CSS for your home-page
+
+.content-wrapper {
+  position: relative;
+}
+
+img {
+  position: relative;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: -1;
+}
