--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render "shared/banner" %>
+<div class="container">
+  <h2>Les cours les plus vus</h2>
+  <p class="medium-paragraph">Les étudiants adorent:</p>
+</div>
