--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <%= render "shared/banner" %>
-<div class="container">
-  <h2>Les cours les plus vus</h2>
-  <p class="medium-paragraph">Les étudiants adorent:</p>
+<div class="home-content">
+  <div class="container">
+    <h2>Notre sélection de cours</h2>
+  </div>
 </div>
