--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,9 +12,9 @@
 
 body {
   font-family: $body-font;
-  margin: 0 auto;
   min-height: 100vh;
   position: relative;
+  margin: 0 auto;
 }
 
 .content-wrapper {
@@ -83,4 +83,16 @@ a {
   color: $primary-violet;
   font-weight: 500;
   font-size: 14px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
 }
