--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,17 +1,15 @@
 .navbar {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-bottom: 1px solid $neutral-100;
   background-color: rgba($color: white, $alpha: 0.75);
   backdrop-filter: $backdrop-blur;
   position: sticky;
   top: 0;
+  padding: 15px 0;
+  z-index: 1000;
 }
 
 .container-navbar {
-  margin: 15px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
