added sign up and forgot password layout

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  border-bottom: 1px solid $neutral-100;
+  border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   background-color: rgba($color: white, $alpha: 0.75);
   backdrop-filter: $backdrop-blur;
   position: sticky;
