--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -6,11 +6,15 @@
   justify-content: space-between;
   border: 1px solid $primary-violet;
   box-shadow: $box-shadow-search;
-  p {
+  input {
     padding: 10px 15px;
     margin: 0;
   }
   i {
     color: $primary-violet;
   }
+}
+
+.search-bar-form {
+  display: flex;
 }
