--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,11 @@
 <%= render "shared/banner" %>
 <div class="home-content">
-  <div class="container">
+  <div class="container mt-2">
     <h2>Notre sélection de cours</h2>
+    <div class="display-cards">
+      <%= render "shared/card" %>
+      <%= render "shared/card" %>
+      <%= render "shared/card" %>
+    </div>
   </div>
 </div>
