--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,3 +23,32 @@
     padding: 0;
   }
 }
+
+.profile-navbar {
+  width: 5rem;
+  display: flex;
+  justify-content: end;
+  display: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  bottom: -8.5rem;
+  background-color: rgba($color: white, $alpha: 0.9);
+  backdrop-filter: $backdrop-blur;
+  border-radius: $border-radius-main;
+  border: 1px solid $neutral-100;
+  box-shadow: $elevation-200;
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  li {
+    padding: 0.5rem 1rem;
+  }
+  a {
+    text-decoration: none;
+    color: $neutral-1000;
+  }
+}
