--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,10 @@
-<h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
 
+
+<% if params[:query].present? %>
+  <h1><%= pluralize( @courses.count, 'cour' ) %> pour '<%= params[:query] %>' :</h1>
+<% else %>
+  <h1>Tous nos cours :</h1>
+<% end %>
 
 
 <div id="courses">
@@ -8,5 +12,7 @@
     <h4><%= course.name %></h4>
     <p><%= course.description %></p>
     <p><%= course.level %></p>
+    <p><%= course.user[:email] %></p>
+    <%= link_to "Découvrir", course_path(course) %>
   <% end %>
 </div>
