--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,27 @@
 <%= render "shared/banner" %>
 <div class="home-content">
-  <div class="container mt-2">
+  <div class="container">
+  <div class='block-home'>
     <h2>Notre sélection de cours</h2>
     <div class="display-cards">
-      <%= render "shared/card" %>
-      <%= render "shared/card" %>
-      <%= render "shared/card" %>
+      <% @courses.each do |course| %>
+        <%= render "shared/card", course: course %>
+      <% end %>
+  </div>
+  <div class='block-home nft-block'>
+    <div class="block-img-home">
+      <%= image_tag 'home_nft_explanation.svg', alt: "Une étudiante qui travaille" %>
+    </div>
+    <div class="block-text-home">
+      <h2>Pourquoi une certification NFT ?</h2>
+      <p class="large-paragraph">
+        De plus en plus d’universités utilisent les NFT pour <strong>la délivrance de titres </strong> et aussi pour <strong>travailler dans des environnements d'apprentissage à distance</strong>. Une pratique notamment préconisée par le MIT pour authentifier les certificats d’éducation.
+      </p>
+      <p class="large-paragraph">
+        Aujourd’hui, ils peuvent être utilisés sur le marché du travail pour valoriser une expertise au même titre qu’un diplôme classique.
+      </p>
     </div>
   </div>
+  </div>
+  </div>
 </div>
-
-<% @courses.each do |course| %>
-<ul>
-<li>
-<h2><%= course.name %></h2>
-<p><%= course.description %></p>
-<p><%= course.level %></p>
-</li>
-</ul>
-<% end %>
