--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,7 @@
+// Card homepage
+
 .card-main {
-  height: 335px;
+  height: 365px;
   width: 365px;
   box-shadow: $elevation-100;
   border-radius: $border-radius-main;
@@ -13,7 +15,7 @@
 }
 
 .card-main-img {
-  height: 40%;
+  height: 50%;
   img {
     height: 100%;
     width: 100%;
@@ -22,7 +24,7 @@
 }
 
 .card-main-content {
-  height: 60%;
+  height: 50%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -44,8 +46,55 @@
 
 .card-author {
   display: flex;
+  align-items: center;
   p {
     padding-left: 0.5rem;
     color: $primary-violet;
+  }
+}
+
+// Card search
+
+.card-horizontal {
+  display: flex;
+  height: 160px;
+  width: 100%;
+  margin: 1.5rem 0;
+  background-color: $neutral-100-violet;
+  text-decoration: none;
+  box-shadow: $elevation-100;
+}
+
+.img-card-horizontal {
+  width: 25%;
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+.content-card-horizontal {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem;
+  h3 {
+    margin: 0;
+  }
+  p {
+    margin: 0.5rem 0;
+  }
+}
+
+.content-bottom-card-horizontal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .label {
+    color: $primary-violet;
+    padding-left: 0.5rem;
+    padding-right: 1rem;
   }
 }
