--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,17 +24,30 @@
   }
 }
 
-.profile-navbar {
-  width: 5rem;
+.avatar-menu {
+  position: relative;
   display: flex;
-  justify-content: end;
-  display: relative;
+  align-items: center;
+  padding: 0.3rem 0.5rem;
+  margin-left: 25px;
+  border: 1px solid rgba($color: $primary-violet, $alpha: 0.2);
+  border-radius: $border-radius-search;
+  justify-content: space-between;
+  i {
+    color: $primary-violet;
+    padding-right: 0.5rem;
+  }
+  &:hover {
+    cursor: pointer;
+    box-shadow: $elevation-200;
+  }
 }
 
 .dropdown-menu {
   position: absolute;
-  bottom: -8.5rem;
-  background-color: rgba($color: white, $alpha: 0.9);
+  bottom: -9.5rem;
+  right: 0;
+  background-color: $neutral-0;
   backdrop-filter: $backdrop-blur;
   border-radius: $border-radius-main;
   border: 1px solid $neutral-100;
@@ -50,5 +63,8 @@
   a {
     text-decoration: none;
     color: $neutral-1000;
+  }
+  .red {
+    color: $level-expert;
   }
 }
