--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,14 +8,15 @@
       <li><a href="#" class="btn-secondary">Enseigner</a></li>
       <li><a href="#" class="btn-secondary">Mes cours</a></li>
       <% if user_signed_in? %>
-        <div class="profile-navbar" data-controller="dropdown" data-action="click->dropdown#showDropdown">
-          <%= image_tag 'Avatar_baponcet.png', alt: "Avatar de l'utilisateur", class: 'avatar' %>
+        <div class="avatar-menu" data-controller="dropdown" data-action="click->dropdown#showDropdown">
+          <i class="fa-solid fa-bars"></i>
+          <%= cl_image_tag(current_user.photo.key, class: 'avatar') %>
           <div class="dropdown-menu d-none" data-dropdown-target="dropdownMenu">
             <ul>
               <li><%= link_to 'Mon profil', root_path %></li>
               <li><%= link_to 'Mes cours',  root_path %></li>
-              <li><%= link_to 'Connexion portefeuille', root_path %></li>
-              <li><%= link_to 'Déconnexion', destroy_user_session_path, data: {turbo_method: :delete} %></li>
+              <li><%= link_to 'Portefeuille', root_path %></li>
+              <li><%= link_to 'Déconnexion', destroy_user_session_path, data: {turbo_method: :delete}, class: 'red' %></li>
             </ul>
           </div>
         </div>
