--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,10 +52,11 @@
   border-radius: $border-radius-main;
   border: 1px solid $neutral-100;
   box-shadow: $elevation-200;
+  width: 210px;
   ul {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
   }
   li {
     padding: 0.5rem 1rem;
@@ -63,8 +64,14 @@
   a {
     text-decoration: none;
     color: $neutral-1000;
+    &:hover {
+      color: $primary-violet;
+    }
   }
   .red {
     color: $level-expert;
+    &:hover {
+      color: $level-expert;
+    }
   }
 }
