--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
             <ul>
               <li><%= link_to 'Mon profil', root_path %></li>
               <li><%= link_to 'Mes cours',  root_path %></li>
-              <li><%= link_to 'Portefeuille', root_path %></li>
+              <li><%= link_to 'Connexion portefeuille', root_path %></li>
               <li><%= link_to 'Déconnexion', destroy_user_session_path, data: {turbo_method: :delete}, class: 'red' %></li>
             </ul>
           </div>
