--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -7,7 +7,7 @@
 }
 
 .course-summary {
-  
+
 }
 
 .course-summary-content {
@@ -34,4 +34,12 @@
 
 .course-display-content {
  padding: 10px;
+}
+
+.selected-tab {
+  background-color: grey;
+}
+
+.course-footer {
+  text-align: right;
 }
