--- a/app/views/classrooms/follow_course.html.erb
+++ b/app/views/classrooms/follow_course.html.erb
@@ -1,5 +1,4 @@
-<h1>My classroom</h1>
-
+<%= cl_image_tag @classroom.course.photo.key, height: 300, width: 400, crop: :fill %>
 <%# Cours rattaché à la classroom, les titres des chapitres, les noms des lecons et leur contenu %>
 <h2><%= @classroom.course.name %></h2>
 <h3><% @classroom.course.chapters.each do |chapter| %></h3>
