--- a/app/views/shared/_steps_card.html.erb
+++ b/app/views/shared/_steps_card.html.erb
@@ -5,7 +5,7 @@
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
           <h3>STEP 1: Sélectionnez votre cours en ligne</h3>
-          <p>Accédez à un catalogue de cours de haute qualité dispensés par des experts de l'écosystème WEB3, qui comprend des cours sur NFT, les cryptomonnaies ou encore la blockchain !</p>
+          <p class="large-paragraph">Accédez à un catalogue de cours de haute qualité dispensés par des experts de l'écosystème WEB3, qui comprend des cours sur NFT, les cryptomonnaies ou encore la blockchain !</p>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
           <h3>STEP 2: Commencez votre apprentissage </h3>
-          <p>Inscrivez-vous gratuitement sur votre cours en ligne et suivez-le à votre rythme.
+          <p class="large-paragraph">Inscrivez-vous gratuitement sur votre cours en ligne et suivez-le à votre rythme.
              La durée des cours nécessite quelques heures de votre temps et peut être suivi sur quelques jours si vous le souhaitez.</p>
           </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
           <h3>STEP 3: Validez vos connaissances</h3>
-          <p>Il est temps de vous tester !
+          <p class="large-paragraph">Il est temps de vous tester !
              À la fin de chaque cours complet, nos professeurs vous invitent à répondre à un test en ligne de 40mn pour évaluer votre niveau. Cette étape est obligatoire pour obtenir votre certification.</p>
           </div>
         </div>
@@ -40,7 +40,7 @@
         <div class="content-card-horizontal" style= "justify-content:center">
           <div class="content-top-card-horizontal">
           <h3>STEP 4: Obtenez votre certificat NFT</h3>
-          <p>Vous avez obtenu un score d’au moins 90 % de réussite à l'évaluation de votre cours ? Félicitations !
+          <p class="large-paragraph">Vous avez obtenu un score d’au moins 90 % de réussite à l'évaluation de votre cours ? Félicitations !
              Vous pouvez à présent générer votre certificat NFT en cliquant sur le bouton de validation !</p>
           </div>
         </div>
