--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,3 +110,11 @@ a {
   -webkit-box-orient: vertical;
   white-space: normal;
 }
+
+.test {
+  height: 0px;
+}
+
+button {
+  font-family: $body-font;
+}
