--- a/app/assets/stylesheets/config/_style.scss
+++ b/app/assets/stylesheets/config/_style.scss
@@ -9,3 +9,4 @@ $backdrop-blur: blur(5px);
 $box-shadow-search: 0 2px 10px rgba(black, 0.15);
 $elevation-100: 0 2px 8px rgba(black, 0.12);
 $elevation-200: 0 2px 12px rgba(black, 0.12);
+$elevation-status: 0 0 3px rgba(black, 0.2);
