some front adjustements

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,20 +13,33 @@
   }
 }
 
-.form-check {
-  outline: none;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  input {
-    margin: 0 0.5rem;
-    width: 1rem;
-  }
-}
+// .form-check {
+//   outline: none;
+//   border: none;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   input {
+//     margin: 0 0.5rem;
+//     width: 1rem;
+//   }
+// }
 
-fieldset {
-  outline: none;
-  border: none;
-  padding: 0;
-}
+// fieldset {
+//   outline: none;
+//   border: none;
+//   padding: 0;
+// }
+
+// .remember {
+//   margin-top: 0.5rem;
+//   display: flex;
+//   justify-content: flex-start;
+//   input {
+//     margin: 0;
+//     margin-right: 8px;
+//   }
+//   label {
+//     font-size: 14px;
+//   }
+// }
