--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -6,15 +6,15 @@
   backdrop-filter: $backdrop-blur;
   box-shadow: $elevation-200;
   margin: auto;
-  text-align: center;
   h2 {
     margin-top: 0;
+    text-align: center;
   }
 }
 
-.input-no-label {
+.input-label {
   label {
-    display: none;
+    font-size: 14px;
   }
 }
 
@@ -32,4 +32,9 @@ input {
   &:focus {
     outline: 2px solid $primary-violet;
   }
+}
+
+.bottom-links {
+  padding-top: 1rem;
+  text-align: center;
 }
