Le user peut suivre un cour

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -25,6 +25,6 @@
     </div>
   </div>
   <div class="course-footer">
-    <%= button_to 'Commencer', course_path(params[:id]) %>
+    <%= button_to 'Commencer', course_classrooms_path(@course) %>
   </div>
 </div>
