--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
               </div>
           <div class="dropdown-menu d-none" data-dropdown-target="dropdownMenu" >
             <ul>
-              <li><%= link_to 'Mon profil', root_path %></li>
+              <li><%= link_to 'Mon profil', dashboard_path %></li>
               <li data-wallet-target="login">
                 <button data-action="click->wallet#connectWallet">
                   Connecter portefeuille
