added dashboard structure (front to be adjusted)

--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -15,7 +15,7 @@
           <p class="label"><%= course.user.username.capitalize %></p>
         </div>
         <div class="card-level">
-          <button class="badge badge-beginner"><%= course.level %></button>
+          <button class="badge badge-beginner"><%= course.level.capitalize %></button>
         </div>
       </div>
     </div>
