--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,6 +9,6 @@ $neutral-0: #FFFFFF;
 $neutral-100: #F1F1F1;
 $neutral-100-violet: #F3F1FC;
 $neutral-200:#d8d8d8;
-$level-beginner: #08875D;
+$level-beginner: #0ACF83;
 $level-intermediate: #FF7F3F;
 $level-expert: #E02D3C;
