--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -23,3 +23,13 @@
   background-color: $neutral-100;
   border-radius: $border-radius-main;
 }
+
+.dashboard-container {
+  h1 {
+    margin-bottom: 0;
+  }
+  p {
+    margin-top: 0.5rem;
+    margin-bottom: 3rem;
+  }
+}
