--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,15 +1,22 @@
 <div class="container">
-  <h1>Bienvenue baponcet 🥳</h1>
-  <p class="paragraph-large">Tu peux retrouver toutes les informations sur tes cours ici !</p>
-  <div class="dashboard">
-    <div class="tabs-dashboard">
-      <ul>
-        <li>Cours non terminés</li>
-        <li>Cours terminés</li>
-        <li>Certifications NFT</li>
-      </ul>
-    </div>
-    <div class="content-dashboard">
+  <div class="dashboard-container">
+    <h1>Bienvenue <%= current_user.username.downcase %> ! 🥳</h1>
+    <p class="paragraph-large">Tu peux retrouver toutes les informations sur tes cours et tes certifications ici.</p>
+    <div class="dashboard">
+      <div class="tabs-dashboard">
+        <ul>
+          <li>Cours non terminés</li>
+          <li>Cours terminés</li>
+          <li>Certifications NFT</li>
+        </ul>
+      </div>
+      <div class="content-dashboard">
+        <div class="display-cards">
+          <% current_user.classrooms.each do |classroom| %>
+            <%= render "shared/card", course: classroom.course %>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
