--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,14 +1,34 @@
+// Primary colors
 $primary-violet: #6966FF;
 $primary-violet-hover: #524FFF;
+
+// Secondary colors
 $secondary-dark: #393953;
 $secondary-dark-hover: #4F4C64;
-$neutral-1000: #1F1F1F;
-$neutral-900: #3C3C3C;
-$neutral-800: #5E5E5E;
+
+// Neutral colors
 $neutral-0: #FFFFFF;
 $neutral-100: #F1F1F1;
 $neutral-100-violet: #F3F1FC;
 $neutral-200:#d8d8d8;
-$level-beginner: #0ACF83;
-$level-intermediate: #FF7F3F;
-$level-expert: #E02D3C;
+$neutral-800: #5E5E5E;
+$neutral-900: #3C3C3C;
+$neutral-1000: #1F1F1F;
+
+// Green colors
+$green-0: #CBFFEB;
+$green-100: #0ACF83;
+$green-200: #0BA96C;
+$green-300: #0A8F5C;
+
+// Orange colors
+$orange-0: #FFEADF;
+$orange-100: #FF7F3F;
+$orange-200: #D66A35;
+$orange-300: #A35027;
+
+// Red colors
+$red-0: #FFD8DB;
+$red-100: #E02D3C;
+$red-200: #B62531;
+$red-300: #811B24;
