--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -7,16 +7,16 @@
 }
 
 .badge-beginner {
-  color: $level-beginner;
-  border: 1px solid $level-beginner;
+  color: $green-200;
+  border: 1px solid $green-200;
 }
 
 .badge-intermediate {
-  color: $level-intermediate;
-  border: 1px solid $level-intermediate;
+  color: $orange-200;
+  border: 1px solid $orange-200;
 }
 
 .badge-expert {
-  color: $level-expert;
-  border: 1px solid $level-expert;
+  color: $red-200;
+  border: 1px solid $red-200;
 }
