--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,14 +1,16 @@
 <% if notice %>
-  <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
+  <div class="alert" data-controller="alert" data-alert-target="alert">
     <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
+    <a type="button" class="btn-close" data-action='click->alert#close'>
+      <i class="fa-solid fa-xmark"></i>
+    </a>
   </div>
 <% end %>
 <% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
+  <div class="alert" data-controller="alert" data-alert-target="alert">
     <%= alert %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
+    <a type="button" class="btn-close" data-action='click->alert#close' >
+      <i class="fa-solid fa-xmark"></i>
+    </a>
   </div>
 <% end %>
