--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,21 +1,25 @@
 <div class="container">
   <div class="dashboard-container">
-    <h1>Bienvenue <%= current_user.username.downcase %> ! 🥳</h1>
-    <p class="paragraph-large">Tu peux retrouver toutes les informations sur tes cours et tes certifications ici.</p>
+    <h1>Bienvenue <%= current_user.username.downcase %> !</h1>
+    <%# <p class="paragraph-large">Tu peux retrouver toutes les informations sur tes cours et tes certifications ici.</p> %>
     <div class="dashboard">
       <div class="tabs-dashboard">
         <ul>
-          <li>Cours non terminés</li>
-          <li>Cours terminés</li>
+          <li class="active-tab">Mes cours</li>
           <li>Certifications NFT</li>
         </ul>
       </div>
-      <div class="content-dashboard">
-        <div class="display-cards">
+      <div class="non-finished-courses">
+        <p class="large-paragraph">Mes cours en progression</p>
+        <div class="display-cards-dashboard">
           <% current_user.classrooms.each do |classroom| %>
-            <%= render "shared/card", course: classroom.course %>
+            <%= render "shared/card_dashboard", course: classroom.course, classroom: classroom %>
           <% end %>
         </div>
+      </div>
+      <div class="finished-courses">
+        <p class="large-paragraph">Mes cours terminés</p>
+        <p><em>Pas de cour terminé pour l'instant</em></p>
       </div>
     </div>
   </div>
