--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -98,3 +98,23 @@
     padding-right: 1rem;
   }
 }
+
+// Cards dashboard
+
+.dashboard-card {
+  background-color: $primary-violet;
+  border-radius: $border-radius-main;
+  box-shadow: $elevation-100;
+  padding: 1rem;
+  transition: 0.2 ease-in-out;
+  h3 {
+    color: $neutral-0;
+    margin: 0;
+  }
+  p {
+    color: $neutral-0;
+  }
+  &:hover {
+    background-color: $primary-violet-hover;
+  }
+}
