--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,27 +1,21 @@
 .dashboard {
-  display: flex;
+  margin-top: 3rem;
 }
 
 .tabs-dashboard {
-  width: 20%;
+  margin-top: 1rem;
   ul {
+    display: flex;
     margin: 0;
     padding: 0;
+    width: 100%;
   }
   li {
-    padding: 0.5rem;
-    background-color: $neutral-100;
     list-style: none;
-    border-radius: $border-radius-main;
-    margin: 0 0.5rem 0.5rem 0;
+    margin-right: 2rem;
+    padding-bottom: 0.5rem;
+    cursor: pointer;
   }
-}
-
-.content-dashboard {
-  width: 80%;
-  min-height: 50vh;
-  background-color: $neutral-100;
-  border-radius: $border-radius-main;
 }
 
 .dashboard-container {
@@ -30,6 +24,28 @@
   }
   p {
     margin-top: 0.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
+}
+
+.active-tab {
+  border-bottom: 2px solid $primary-violet;
+  letter-spacing: -0.03rem;
+  font-weight: 600;
+}
+
+.display-cards-dashboard {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.non-finished-courses {
+  margin-top: 2.5rem;
+  
+}
+
+.finished-courses {
+  margin-top: 2.5rem;
 }
