--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,18 +8,20 @@
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
         <%= f.error_notification %>
         <div class="input-label">
-          <%= f.input :username, placeholder: 'Username', required: true, autofocus: true, input_html: { autocomplete: "username" }  %>
+          <%= f.input :username, label: 'Nom d\'utilisateur', placeholder: 'Nom d\'utilisateur', required: true, autofocus: true, input_html: { autocomplete: "username" }  %>
           <%= f.input :email,
                       placeholder: 'Email',
                       required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email" }%>
           <%= f.input :password,
+                      label: 'Mot de passe',
                       placeholder: 'Mot de passe',
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
           <%= f.input :password_confirmation,
-                      placeholder: 'Confirmation du mot de passe',
+                      label: 'Confirmation du mot de passe',
+                      placeholder: 'Mot de passe',
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
         </div>
