layout courses#show

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,6 +11,7 @@ $neutral-0: #FFFFFF;
 $neutral-100: #F1F1F1;
 $neutral-100-violet: #F3F1FC;
 $neutral-200:#d8d8d8;
+$neutral-200-violet: #DBD5F2;
 $neutral-800: #5E5E5E;
 $neutral-900: #3C3C3C;
 $neutral-1000: #1F1F1F;
