--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -8,8 +8,13 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  &:hover {
+    h3 {
+      color: $primary-violet-hover
+    }
+  box-shadow: $elevation-500;
+  }
 }
-
 .link-card {
   text-decoration: none;
 }
@@ -31,6 +36,7 @@
   justify-content: space-between;
   background-color: $neutral-100-violet;
   padding: 1rem;
+  transition: 0.2 ease-in-out;
   h3 {
     margin: 0;
     color: $primary-violet;
