--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -7,12 +7,16 @@
 }
 
 .course-summary {
-
+  width: 30%;
 }
 
 .course-summary-content {
-  width: 300px;
-  padding: 5px;
+  padding-right: 5rem;
+  p {
+      &:hover {
+      color: $primary-violet;
+    }
+  }
 }
 
 .chapter-name {
@@ -26,6 +30,7 @@
 }
 
 .course-display {
+  width: 70%;
   img {
     width: 100%;
     border-radius: 20px;
@@ -37,9 +42,20 @@
 }
 
 .selected-tab {
-  background-color: grey;
+  font-weight: 700;
 }
 
 .course-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 2rem 0;
+  border-top: 1px solid $neutral-200;
+}
+
+.container-footer-course {
   text-align: right;
+}
+
+.tab-font {
+  font-size: 16px;
 }
