--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -14,7 +14,7 @@
   padding-right: 5rem;
   p {
       &:hover {
-      color: $primary-violet;
+      color: $primary-violet-hover;
     }
   }
 }
@@ -43,12 +43,14 @@
 
 .selected-tab {
   font-weight: 700;
+  color: $primary-violet;
 }
 
 .course-footer {
-  display: flex;
-  justify-content: flex-end;
-  padding: 2rem 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 1.5rem 0;
   border-top: 1px solid $neutral-200;
 }
 
