fixed the button for the show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,6 +10,7 @@
   font-weight: 700;
   text-decoration: none;
   transition: 0.2s ease-in-out;
+  cursor: pointer;
   &:hover {
     background-color: $primary-violet-hover;
   }
