--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -14,6 +14,11 @@
   &:hover {
     background-color: $primary-violet-hover;
   }
+  &:disabled {
+    background-color: $neutral-300;
+    color: $neutral-0;
+    cursor: default;
+  }
 }
 
 .btn-secondary-fill {
