--- a/app/assets/stylesheets/pages/_show_course.scss
+++ b/app/assets/stylesheets/pages/_show_course.scss
@@ -50,8 +50,9 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
   border-top: 1px solid $neutral-200;
+  background-color: $neutral-100-violet;
 }
 
 .container-footer-course {
