--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,35 +1,37 @@
 <div class='container'>
-  <div class='course' data-controller="tabs">
-    <div class='course-summary'>
-      <div class='course-summary-content'>
-        <p class="selected-tab tab-font clickable" data-action='click->tabs#display' data-tabs-index-param="0" data-tabs-target="tab">Introduction</p>
-        <% @course.chapters.each_with_index do |chapter, index| %>
-          <p class='tab-font clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index + 1 %>" data-tabs-target="tab"><%= chapter.name %></p>
+  <div class="wrapper-no-footer">
+    <div class='course' data-controller="tabs">
+      <div class='course-summary'>
+        <div class='course-summary-content'>
+          <p class="selected-tab tab-font clickable" data-action='click->tabs#display' data-tabs-index-param="0" data-tabs-target="tab">Introduction</p>
+          <% @course.chapters.each_with_index do |chapter, index| %>
+            <p class='tab-font clickable' data-action='click->tabs#display' data-tabs-index-param="<%= index + 1 %>" data-tabs-target="tab"><%= chapter.name %></p>
+          <% end %>
+        </div>
+      </div>
+      <div class='course-display'>
+        <div data-tabs-target="content">
+          <%= cl_image_tag(@course.photo.key) %>
+          <div class='course-display-content'>
+            <h1><%= @course.name %></h1>
+            <p class="large-paragraph"><%= @course.description %></p>
+          </div>
+        </div>
+        <% @course.chapters.each do |chapter| %>
+          <div class='d-none' data-tabs-target='content'>
+            <%= render 'chapter', chapter: chapter %>
+          </div>
         <% end %>
       </div>
-    </div>
-    <div class='course-display'>
-      <div data-tabs-target="content">
-        <%= cl_image_tag(@course.photo.key) %>
-        <div class='course-display-content'>
-          <h1><%= @course.name %></h1>
-          <p class="large-paragraph"><%= @course.description %></p>
-        </div>
-      </div>
-      <% @course.chapters.each do |chapter| %>
-        <div class='d-none' data-tabs-target='content'>
-          <%= render 'chapter', chapter: chapter %>
-        </div>
-      <% end %>
     </div>
   </div>
 </div>
 <div class="course-footer">
   <div class="container container-footer-course">
     <% if @user_has_course %>
-       <%= link_to 'Continuer', dashboard_path, class: 'btn-main' %>
+      <%= link_to 'Continuer', dashboard_path, class: 'btn-main' %>
     <% else %>
-       <%= button_to 'Commencer', course_classrooms_path(@course), class: 'btn-main' %>
+      <%= button_to 'Commencer', course_classrooms_path(@course), class: 'btn-main', :disabled => !current_user %>
     <% end %>
   </div>
 </div>
